fixed footer spacing

--- a/src/style.css
+++ b/src/style.css
@@ -189,7 +189,7 @@ footer .social-links a:hover {
 
 footer p {
   margin-bottom: 0;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 footer p a {
